[package]
name = "m_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "m_rs"
path = "src/main.rs"

[lib]
name = "m_rs_lib"
path = "src/lib.rs"

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
http = "0.2.9"
http-serde = "1.1.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["compression-full"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.2"
